# supero

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  verify.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260409_0001_initial_schema.py  20260410_0002_pipeline_foundation.py
app/: __init__.py  main.py
app/api/routes/: __init__.py  health.py  pipeline.py
app/core/: __init__.py  config.py  logging.py
app/db/: __init__.py  session.py
app/db/models/: __init__.py  candidate_url.py  extraction_log.py  job_listing.py  pipeline_run.py  search_job.py  user_preference.py
app/db/repositories/: __init__.py  pipeline_run_repository.py  user_preference_repository.py
app/orchestration/: __init__.py  graph.py  nodes.py  retry.py  runner.py  state.py
app/orchestration/adapters/: __init__.py  mock_adapters.py
app/schemas/: __init__.py  health.py  orchestration.py  pipeline.py
app/services/: __init__.py  health_service.py  orchestration_service.py  pipeline_service.py  queue_service.py
app/workers/: __init__.py  scheduler.py
tests/: conftest.py  test_config.py  test_health.py  test_orchestration_contracts.py  test_orchestration_graph.py  test_phase_contract_integration.py  test_pipeline_contracts.py  test_pipeline_models.py  test_pipeline_routes.py  test_scheduler.py
