[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "job-discovery-saas"
version = "0.1.0"
description = "Phase 1 backend foundation for intelligent job discovery."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "SQLAlchemy>=2.0.30,<3.0.0",
    "alembic>=1.13.2,<2.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "redis>=5.0.7,<6.0.0",
    "langgraph>=0.2.34,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
